// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsView renders RTL styling 1`] = `
<div
  className="c-tab is-rtl "
  data-garden-id="tabs.tabs_view"
  data-garden-version="version"
/>
`;

exports[`TabsView renders default styling 1`] = `
<div
  className="c-tab "
  data-garden-id="tabs.tabs_view"
  data-garden-version="version"
/>
`;

exports[`TabsView renders vertical styling 1`] = `
<div
  className="c-tab c-tab--block "
  data-garden-id="tabs.tabs_view"
  data-garden-version="version"
/>
`;
